compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__import_errors_do_not_block_analysis.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import unknown_module\n\npub fn main() {\n  1 + Nil\n}"
---
----- SOURCE CODE
import unknown_module

pub fn main() {
  1 + Nil
}

----- ERROR
error: Unknown module
  ┌─ /src/one/two.rakun:1:1
  │
1 │ import unknown_module
  │ ^^^^^^^^^^^^^^^^^^^^^

No module has been found with the name `unknown_module`.

error: Type mismatch
  ┌─ /src/one/two.rakun:4:7
  │
4 │   1 + Nil
  │       ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Nil
