compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__module_alias_used_as_a_name.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "\nimport one/two\n\npub fn main() {\n  two\n}\n"
---
----- SOURCE CODE
-- one/two.rakun


-- main.rakun

import one/two

pub fn main() {
  two
}


----- ERROR
error: Module `two` used as a value
  ┌─ /src/one/two.rakun:5:3
  │
5 │   two
  │   ^^^

Modules are not values, so you cannot assign them to variables, pass them
to functions, or anything else that you would do with a value.
