compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__unqualified_using_opaque_constructo.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 175
expression: "import one.{Two}\n\npub fn main() {\n  Two\n}"
---
----- SOURCE CODE
-- one.rakun
pub opaque record Two { Two }

-- main.rakun
import one.{Two}

pub fn main() {
  Two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:1:13
  │
1 │ import one.{Two}
  │             ^^^ Did you mean `type Two`?

`Two` is only a type, it cannot be imported as a value.

error: Unknown variable
  ┌─ /src/one/two.rakun:4:3
  │
4 │   Two
  │   ^^^

The name `Two` is not in scope here.
